crates/strider-analyze/tests/snapshots/v3__x86_kernel__arithmetic__umod.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="Rem:u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "6" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
